# UCS654

Assignment1/: Assignment1UCS654.ipynb
Assignment12/: README.md  assignment12.ipynb
Assignment2/: UCS654_Assignment2 (1).ipynb  UCS654_Assignment2.ipynb  readme.md
Assignment3/: Assignment3UCS654.ipynb  GITHUB_README.md
Assignment3/Topsis-Saumil Makkar-102303862/: .gitignore  LICENSE  PYPI_UPLOAD_GUIDE.md  QUICK_START.md  README.md  pyproject.toml  setup.py
Assignment3/Topsis-Saumil Makkar-102303862/topsis/: __init__.py  topsis.py
Assignment3/topsis_web/: .env.example  SETUP_GUIDE.md  app.py
Assignment3/topsis_web/results/: result_sample_data.csv
Assignment3/topsis_web/static/css/: style.css
Assignment3/topsis_web/templates/: index.html
Assignment4/Predective_Analytics_Model_Topsis/: Predictive_Analytics_Text_Classification.ipynb  README.md
Assignment5/Predective_Analytics_Simulation/: Predictive_Analytics_Simulation.ipynb  README.md
Assignment7/: 102303862.py  HOW_TO_EXPORT_COOKIES.md  Readme.md  cookies.txt
Projects/: multithreading1.ipynb
Projects/created_files/created_files/: file_1.txt  file_10.txt  file_10_upper.txt  file_1_upper.txt  file_2.txt  file_2_upper.txt  file_3.txt  file_3_upper.txt  file_4.txt  file_4_upper.txt  file_5.txt  file_5_upper.txt  file_6.txt  file_6_upper.txt  file_7.txt  file_7_upper.txt  file_8.txt  file_8_upper.txt  file_9.txt  file_9_upper.txt
Sampling Assignment/: README.md  assignment.ipynb
